Added navigation link to COPO API web page

--- a/src/apps/copo_core/templates/copo/base.html
+++ b/src/apps/copo_core/templates/copo/base.html
@@ -319,6 +319,14 @@
                                 </div>
                             </a>
                         </li>
+                        <li>
+                            <a href="/api" target="_parent">
+                                <div class="custom-nav-items">
+                                    <i class="fa fa-plug" aria-hidden="true"></i>
+                                    <span class="icon_text">API Endpoints</span>
+                                </div>
+                            </a>
+                        </li>
                     </ul>
                 </a>
             </li>
