--- a/src/apps/copo_landing_page/templates/nav_dropdown.html
+++ b/src/apps/copo_landing_page/templates/nav_dropdown.html
@@ -29,6 +29,7 @@
                         <li role="presentation"><a href="/copo/tol_dashboard/stats" target="_parent">Statistics</a></li>
                         <li role="presentation"><a href="/copo/tol_dashboard/tol" target="_parent">Tree of Life Dashboard</a></li>
                         <li role="presentation"><a href="/copo/copo_accessions/dashboard" target="_parent">Accessions Dashboard</a></li>
+                        <li role="presentation"><a href="/api" target="_parent">API Endpoints</a></li>
                     </ul>
                 </li>
                 <li role="presentation"><a href="/news" target="_parent">News</a></li>
