Changed tag IDs to camelCase; added hidden ‘profiles per page’ attribute

--- a/src/apps/copo_profile/templates/copo/profile/copo_profile_index.html
+++ b/src/apps/copo_profile/templates/copo/profile/copo_profile_index.html
@@ -43,8 +43,9 @@
       />   
         <input type="hidden" id="copo_email" value="{{copo_email}}"/>
         <input type="hidden" id="groups" value="{{groups}}"/>
-        <input type="hidden" id="profiles_visible_length" value="{{profiles_visible_length}}"/>
-        <input type="hidden" id="profiles_total" value="{{profiles_total}}"/>
+        <input type="hidden" id="profilesVisibleLength" value="{{profiles_visible_length}}"/>
+        <input type="hidden" id="profilesTotal" value="{{profiles_total}}"/>
+        <input type="hidden" id="profilesPerPage" value="{{profiles_per_page}}" />
     </div>
 
     <style>
