Corrected 'colour' spelling in 'na_colour'/'empty_colour'

--- a/src/apps/copo_accession/static/copo_accessions/css/copo_accessions.css
+++ b/src/apps/copo_accession/static/copo_accessions/css/copo_accessions.css
@@ -24,11 +24,11 @@ th {
 }
 
 .cell-no-content,
-.empty_color {
+.empty_colour {
     background-color: #fff3f3 !important;
 }
 
-.na_color {
+.na_colour {
     background-color: #eee;
 }
 
