--- a/src/apps/copo_dtol_submission/static/copo_dtol_submission/css/copo_sample_accept_reject.css
+++ b/src/apps/copo_dtol_submission/static/copo_dtol_submission/css/copo_sample_accept_reject.css
@@ -66,11 +66,11 @@ td {
     color: #e1e1e1 !important;
 }
 
-.na_color {
+.na_colour {
     background-color: #eee;
 }
 
-.empty_color {
+.empty_colour {
     background-color: #f7eded;
 }
 
