--- a/src/apps/copo_tol_dashboard/static/tol_dashboard/css/tol_inspection.css
+++ b/src/apps/copo_tol_dashboard/static/tol_dashboard/css/tol_inspection.css
@@ -22,11 +22,11 @@ td {
     background-color: #e1e1e1 !important;
 }
 
-.na_color {
+.na_colour {
     background-color: #eee;
 }
 
-.empty_color {
+.empty_colour {
     background-color: #f7eded;
 }
 
