Changed 'All profiles' label to 'Profiles'

--- a/src/apps/copo_dtol_submission/templates/copo/copo_sample_accept_reject.html
+++ b/src/apps/copo_dtol_submission/templates/copo/copo_sample_accept_reject.html
@@ -110,7 +110,7 @@
   <div class="panel-col-4" id="profile_panel">
     <ul hidden class="nav nav-tabs profile-filter" id="erga">
       <li class="hot_tab_profile in active">
-        <a data-toggle="tab" href="my_profiles">All profiles</a>
+        <a data-toggle="tab" href="my_profiles">Profiles</a>
       </li>
       <!--li class="hot_tab_profile in">
                     <a data-toggle="tab" href="all_profiles">All profiles</a>
@@ -119,7 +119,7 @@
 
     <ul hidden class="nav nav-tabs profile-filter" id="non_erga">
       <li class="hot_tab_profile in active">
-        <a data-toggle="tab" href="my_profiles">All profiles</a>
+        <a data-toggle="tab" href="my_profiles">Profiles</a>
       </li>
     </ul>
 
