--- a/src/apps/copo_core/templates/copo/base.html
+++ b/src/apps/copo_core/templates/copo/base.html
@@ -348,7 +348,7 @@
                 </a>
             </li>
             <li class="nav-item" style="margin-left: 15px;" title="About COPO" role="presentation">
-                <a class="nav-link" href="/about" target="_blank">
+                <a class="nav-link" href="/about" target="_parent">
                     <span data-copo-tour-id="about_button">
                         <i class="fa fa-info-circle" style="font-size: 17px;" aria-hidden="true"></i>
                     </span>
@@ -372,7 +372,7 @@
 
                         {% if request.user.is_staff %}
                             <li>
-                                <a class="dropdown-item" href="{# url 'copo:copo_repositories' #}" role="menuitem" tabindex="-1">
+                                <a class="dropdown-item" href="{# url 'copo:copo_repositories' #}" role="menuitem" tabindex="-1" target="_parent">
                                     <div class="custom-nav-items">
                                         <i class="fa fa-database" aria-hidden="true"></i>
                                         <span class="icon_text">Administer Repositories</span>
@@ -382,7 +382,7 @@
                         {% endif %}
 
                         <li>
-                            <a class="dropdown-item" href="{% url 'copo:groups' %}" role="menuitem" tabindex="-1">
+                            <a class="dropdown-item" href="{% url 'copo:groups' %}" role="menuitem" tabindex="-1" target="_parent">
                                 <div class="custom-nav-items">
                                     <i class="fa fa-users" aria-hidden="true"></i>
                                     <span class="icon_text">View Groups</span>
@@ -391,7 +391,7 @@
                         </li>
 
                         <li>
-                            <a class="dropdown-item" href="{% url 'copo:view_user_info' %}" role="menuitem" tabindex="-1">
+                            <a class="dropdown-item" href="{% url 'copo:view_user_info' %}" role="menuitem" tabindex="-1" target="_parent">
                                 <div class="custom-nav-items">
                                     <i class="fa fa-eye" aria-hidden="true"></i>
                                     <span class="icon_text">User Info</span>
@@ -399,7 +399,7 @@
                             </a>
                         </li>
                         <li role="presentation">
-                            <a class="dropdown-item" role="menuitem" tabindex="-1" href="{%  url 'copo_login:logout' %}">                  
+                            <a class="dropdown-item" role="menuitem" tabindex="-1" href="{%  url 'copo_login:logout' %}" target="_parent">                  
                                 <div class="custom-nav-items">
                                     <i class="fa fa-sign-out-alt" aria-hidden="true"></i>
                                     <span class="icon_text">Logout</span>
@@ -408,7 +408,7 @@
                         </li>
                     {% else %}
                         <li>
-                            <a class="dropdown-item" href="{%  url 'copo_login:login' %}" role="menuitem" tabindex="-1">
+                            <a class="dropdown-item" href="{%  url 'copo_login:login' %}" role="menuitem" tabindex="-1" target="_parent">
                                 <div class="custom-nav-items">
                                     <i class="fa fa-sign-in-alt" aria-hidden="true"></i>
                                     <span class="icon_text">Login</span>
