Enhanced accessibility by adding ARIA labels and ensured that interactive elements are visible

--- a/src/apps/copo_core/templates/copo/component_sample_images_modal.html
+++ b/src/apps/copo_core/templates/copo/component_sample_images_modal.html
@@ -204,7 +204,7 @@
 </style>
 
 <!-- Image modal (a carousel inside a modal) -->
-<div class="modal fade" id="imageModal" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal fade" id="imageModal" tabindex="-1" role="dialog" aria-modal="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header" style="background-color: #337ab7;">
