--- a/src/apps/copo_landing_page/templates/manifests.html
+++ b/src/apps/copo_landing_page/templates/manifests.html
@@ -45,8 +45,8 @@
                                 Blank template</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a id="asg_prefilled_template_option" class="wizard-link" href="javascript:"
-                                   onclick="showWizardBasedOnManifestType('asg')"
-                                   aria-hidden="true">Prefilled template</a></li>
+                                   onclick="showWizardBasedOnManifestType('asg')">
+                                   Prefilled template</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="{{ 'ASG'|get_sop_url  }}">
                                     Standard Operating Procedure (SOP)</a></li>
@@ -70,8 +70,8 @@
                                 Blank template</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a id="dtol_prefilled_template_option" class="wizard-link" href="javascript:"
-                                   onclick="showWizardBasedOnManifestType('dtol')"
-                                   aria-hidden="true">Prefilled template</a></li>
+                                   onclick="showWizardBasedOnManifestType('dtol')">
+                                   Prefilled template</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="{{ 'DTOL'|get_sop_url  }}">
                                     Standard Operating Procedure (SOP)</a></li>
@@ -94,8 +94,8 @@
                                 Blank template</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a id="erga_prefilled_template_option" class="wizard-link" href="javascript:"
-                                   onclick="showWizardBasedOnManifestType('erga')"
-                                   aria-hidden="true">Prefilled template</a></li>
+                                   onclick="showWizardBasedOnManifestType('erga')">
+                                   Prefilled template</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="{{ 'ERGA'|get_sop_url  }}">
                                     Standard Operating Procedure (SOP)</a></li>
@@ -177,7 +177,10 @@
 
                                 <div class="well">
                                     <label>Are there common values for these fields?&nbsp;
-                                        <i id="info" class="fa fa-info-circle" aria-hidden="true"></i>
+                                        <i id="info" class="fa fa-info-circle" aria-hidden="true"
+                                           aria-label="Information about common values"
+                                           role="tooltip">
+                                        </i>
 
                                     </label>
                                     <br>
