--- a/src/apps/copo_news/templates/copo/news_list.html
+++ b/src/apps/copo_news/templates/copo/news_list.html
@@ -21,7 +21,7 @@
                     {% endfor %}
                 </select>
                 <!-- Refresh icon -->
-                <i id='getAllNewsItemsIconID' class="fa fa-refresh" aria-hidden="true" title="Get all news items by all categories"></i>
+                <i id='getAllNewsItemsIconID' class="fa fa-refresh" title="Get all news items by all categories"></i>
             </div>
             
             <!-- News List section -->
