--- a/src/apps/copo_core/templates/copo/base.html
+++ b/src/apps/copo_core/templates/copo/base.html
@@ -286,25 +286,28 @@
         <ul class="nav navbar-nav navbar-right collapse navbar-collapse">
             <li class="dropdown" title="Notifications">
                 <a data-container="body" title="Current Tasks"
-                   data-placement="bottom" id="bell_notification">
+                   data-placement="bottom" id="bell_notification"
+                   aria-label="View current tasks" role="button">
                     <span><i class="fa fa-bell" aria-hidden="true"></i></span>
                 </a>
             </li>
             <li class="dropdown" title="Analytics">
-                <a href="#" class="dropdown-toggle " data-toggle="dropdown" role="button" aria-haspopup="true"
+                <a id="analyticsDropdown" href="#" class="dropdown-toggle " data-toggle="dropdown" role="button" aria-haspopup="true"
                     aria-expanded="false">
                    <i class="fa fa-chart-line" aria-hidden="true"></i>
-                    <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
+                    <ul class="dropdown-menu" role="menu" aria-labelledby="analyticsDropdown">
                         <li>
-                            <a href="/copo/tol_dashboard/stats" target="_parent">
+                            <a href="/copo/tol_dashboard/stats" target="_parent"
+                                aria-label="Statistics">
                                 <div class="custom-nav-items">
                                     <i class="fa fa-bar-chart" aria-hidden="true"></i>
-                                    <span class="icon_text"> Statistics</span>
+                                    <span class="icon_text">Statistics</span>
                                 </div>
                             </a>
                         </li>
                         <li>
-                            <a href="/copo/tol_dashboard/tol" target="_parent">
+                            <a href="/copo/tol_dashboard/tol" target="_parent"
+                                aria-label="Tree of Life Dashboard">
                                 <div class="custom-nav-items">
                                     <i class="fa fa-chart-pie" aria-hidden="true"></i>
                                     <span class="icon_text">Tree of Life Dashboard</span>
@@ -312,7 +315,8 @@
                             </a>
                         </li>
                         <li>
-                            <a href="/copo/copo_accessions/dashboard" target="_parent">
+                            <a href="/copo/copo_accessions/dashboard" target="_parent"
+                               aria-label="View Accessions Dashboard">
                                 <div class="custom-nav-items">
                                     <i class="fa fa-sitemap" aria-hidden="true"></i>
                                     <span class="icon_text">Accessions Dashboard</span>                                   
@@ -320,7 +324,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="/api" target="_parent">
+                            <a href="/api" target="_parent" aria-label="COPO API endpoints">
                                 <div class="custom-nav-items">
                                     <i class="fa fa-plug" aria-hidden="true"></i>
                                     <span class="icon_text">API Endpoints</span>
@@ -331,52 +335,57 @@
                 </a>
             </li>
             <li class="dropdown" style="margin-left: 15px;" title="Documentation">
-                <a id="copo-documentation" href="https://copo-docs.readthedocs.io/en/latest/" target="_blank">
+                <a id="copo-documentation" href="https://copo-docs.readthedocs.io/en/latest/" 
+                   target="_blank" aria-label="Documentation">
                     <span data-copo-tour-id="documentation_button">
                         <i class="fa fa-book" aria-hidden="true"></i>
                     </span>
                 </a>
             </li>
             <li class="dropdown" style="margin-left: 15px;" title="News">
-                <a href="/news" target="_parent">
+                <a href="/news" target="_parent" aria-label="News">
                     <span data-copo-tour-id="news_button">
                         <i class="fa fa-newspaper" aria-hidden="true"></i>
                     </span>
                 </a>
             </li>
             <li class="dropdown" style="margin-left: 15px;" title="Contact COPO">
-                <a href="/contact" target="_parent">
+                <a href="/contact" target="_parent" aria-label="Contact COPO">
                     <span data-copo-tour-id="contact_button">
                             <i class="fa fa-envelope" aria-hidden="true"></i>
                     </span>
                 </a>
             </li>
             <li class="dropdown" style="margin-left: 15px;" title="About COPO">
-                <a href="/about" target="_parent">
+                <a href="/about" target="_parent" aria-label="About COPO">
                     <span data-copo-tour-id="about_button">
                         <i class="fa fa-info-circle" style="font-size: 17px;" aria-hidden="true"></i>
                     </span>
                 </a>
             </li>
             <li class="dropdown" title="Settings">
-                <a href="#" class="dropdown-toggle " data-toggle="dropdown" role="button" aria-haspopup="true"
-                   aria-expanded="false">
-                    {% if user.is_authenticated %}<i class="fa fa-gear" aria-hidden="true"></i>
+                <a id="settingsDropdown" href="#" class="dropdown-toggle " data-toggle="dropdown" 
+                   role="button" aria-haspopup="true" aria-expanded="false">
+                    {% if user.is_authenticated %}
+                        <i class="fa fa-gear" aria-hidden="true"></i>
                         <span data-copo-tour-id="global_user_authenticated_button">{{ user }}
-                            <span class="caret" style="margin-left: 5px;"></span></span>
+                            <span class="caret" style="margin-left: 5px;"></span>
+                        </span>
                     {% else %}
-                        <i class="fa fa-sign-in-alt copo-header-icons" aria-hidden="true">&nbsp
-                            <span class="caret"></span></i>
+                        <i class="fa fa-sign-in-alt copo-header-icons" aria-hidden="true">&nbsp;
+                            <span class="caret"></span>
+                        </i>
                         Login
                     {% endif %}
                 </a>
 
-                <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+                <ul class="dropdown-menu" role="menu" aria-labelledby="settingsDropdown">
                     {% if user.is_authenticated %}
-
                         {% if request.user.is_staff %}
                             <li>
-                                <a href="{# url 'copo:copo_repositories' #}" role="menuitem" tabindex="-1" target="_parent">
+                                <a href="{# url 'copo:copo_repositories' #}" role="menuitem" 
+                                   tabindex="-1" target="_parent" 
+                                   aria-labelledby="Administer Repositories">
                                     <div class="custom-nav-items">
                                         <i class="fa fa-database" aria-hidden="true"></i>
                                         <span class="icon_text">Administer Repositories</span>
@@ -386,7 +395,8 @@
                         {% endif %}
 
                         <li>
-                            <a href="{% url 'copo:groups' %}" role="menuitem" tabindex="-1" target="_parent">
+                            <a href="{% url 'copo:groups' %}" role="menuitem" tabindex="-1" 
+                              target="_parent" aria-labelledby="View Groups">
                                 <div class="custom-nav-items">
                                     <i class="fa fa-users" aria-hidden="true"></i>
                                     <span class="icon_text">View Groups</span>
@@ -395,16 +405,19 @@
                         </li>
 
                         <li>
-                            <a href="{% url 'copo:view_user_info' %}" role="menuitem" tabindex="-1" target="_parent">
+                            <a href="{% url 'copo:view_user_info' %}" role="menuitem" 
+                               tabindex="-1" target="_parent" 
+                               aria-labelledby="User Information">
                                 <div class="custom-nav-items">
                                     <i class="fa fa-eye" aria-hidden="true"></i>
                                     <span class="icon_text">User Info</span>
                                 </div>
                             </a>
                         </li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1"
-                                                   href="{%  url 'copo_login:logout' %}" target="_parent">
-                                                   
+                        <li role="presentation">
+                            <a role="menuitem" tabindex="-1"
+                                href="{%  url 'copo_login:logout' %}" target="_parent"
+                                aria-labelledby="Logout">                   
                             <div class="custom-nav-items">
                                 <i class="fa fa-sign-out-alt" aria-hidden="true"></i>
                                 <span class="icon_text">Logout</span>
@@ -413,7 +426,8 @@
                         </li>
                     {% else %}
                         <li>
-                            <a href="{%  url 'copo_login:login' %}" role="menuitem" tabindex="-1" target="_parent">
+                            <a href="{%  url 'copo_login:login' %}" role="menuitem" tabindex="-1" 
+                                target="_parent" aria-labelledby="Login">
                                 <div class="custom-nav-items">
                                     <i class="fa fa-sign-in-alt" aria-hidden="true"></i>
                                     <span class="icon_text">Login</span>
