--- a/src/apps/copo_core/templates/copo/privacy_notice.html
+++ b/src/apps/copo_core/templates/copo/privacy_notice.html
@@ -181,6 +181,7 @@
         </p>
         <br>
         <p><b>Published on: 28-10-2023</b></p>
+        <p><b>Last updated: 24-09-2024</b></p>
     </div>
 </div>
 {% endblock content%}
