Updated 'Contact' href in links

--- a/src/apps/copo_core/templates/copo/terms_of_use.html
+++ b/src/apps/copo_core/templates/copo/terms_of_use.html
@@ -139,7 +139,7 @@
                 individual or organisation providing the feedback states otherwise.
             </li>
             <li>Any questions or comments concerning these terms of use can be addressed to us by 
-                <a href="/#contact-sec">contacting us</a>. More details about the data that we collect 
+                <a href="/contact">contacting us</a>. More details about the data that we collect 
                 from you when you browse the website, make manifest submissions and how we process the 
                 data are detailed in our 
                 <a style="text-decoration: underline;" href="/about/privacy_notice">Privacy Notice</a>.
