--- a/src/apps/copo_landing_page/templates/people.html
+++ b/src/apps/copo_landing_page/templates/people.html
@@ -78,7 +78,7 @@
             </li>
             <li><a href="/people">People</a>
             </li>
-            <li><a href="/#contact-sec">Contact us</a>
+            <li><a href="/contact">Contact us</a>
             </li>
 
 
