Revised displayed message when a study is released

--- a/static/copo/css/copo/style.css
+++ b/static/copo/css/copo/style.css
@@ -471,11 +471,15 @@ div.dataTables_processing.ui.segment {
     font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif
 }
 
-/*
-.bolder {
+
+.text-bold {
   font-weight: bold;
 }
-*/
+
+.text-underline {
+  text-decoration: underline;
+}
+
 
 /*custom styling of bootstrap dialog*/
 .copo-modal2 > .modal-dialog {
