Add max image size info to the "upload images" button

--- a/src/apps/copo_sample/templates/copo/component_sample_spreadsheet_modal.html
+++ b/src/apps/copo_sample/templates/copo/component_sample_spreadsheet_modal.html
@@ -22,12 +22,12 @@
                             Upload Barcoding Data
                         </label>
                         -->
-                    <label class="ui teal button disabled" for="images" id="images_label" disabled>
-
+                    <label class="ui teal button disabled" for="images" id="images_label"  title="The max total image size should be no more than 2GB" disabled>
                         <input enctype='multipart/formdata' id="images" name="images" type="file"
                             accept=".png,.jpg, .jpeg" multiple style="display:none"
                             onchange="upload_image_files(this.files)">
                         Upload Images
+                        <i class="fa fa-info-circle"></i>
                     </label>
                     <label class="ui orange button disabled" for="permits" id="files_label" disabled>
 
