--- a/src/apps/copo_single_cell_submission/templates/copo/copo_single_cell.html
+++ b/src/apps/copo_single_cell_submission/templates/copo/copo_single_cell.html
@@ -130,7 +130,7 @@ data-backdrop="static" data-keyboard="false">
 
     <ul class="nav nav-tabs" id="singlecell-tabs" >
       <!--li >
-          <a data-toggle="tab" data-ba.tag id="study_table_nav_tab" href="#study">Study</a>
+          <a data-toggle="tab" id="study_table_nav_tab" href="#study">Study</a>
       </li-->
 
     </ul>
@@ -162,14 +162,27 @@ data-backdrop="static" data-keyboard="false">
   data-copo-tour-id="singlecell_table"
 ></div>
 <!-- div used by the quick tour agent -->
-<div class="table-parent-div">
-  <table
-    id="singlecell_table"
-    class="ui celled table hover copo-noborders-table"
-    cellspacing="0"
-    width="100%"
-  ></table>
+
+<ul class="nav nav-tabs" id="singlecell_data_tabs" >
+  <!--li >
+      <a data-toggle="tab" id="study_data_nav_tab" href="#study_data">Study</a>
+  </li-->
+</ul>
+
+<div class="tab-content" style="padding:30px" id="singlecell_data_tab_content">
+  <!--div class="table-parent-div tab-pane fade" id="study_data">
+    <table
+      id="singlecell_table"
+      class="ui celled table hover copo-noborders-table"
+      cellspacing="0"
+      width="100%"
+    ></table>
+  </div>
+  </div-->
 </div>
+
+
+
 
 <div id="data" style="display: none"></div>
 
