--- a/src/apps/copo_single_cell_submission/templates/copo/copo_single_cell.html
+++ b/src/apps/copo_single_cell_submission/templates/copo/copo_single_cell.html
@@ -26,6 +26,7 @@
   <!-- hidden attributes  -->
   <input type="hidden" id="profile_title" value="{{ profile.title }}" />
   <input type="hidden" id="profile_id" value="{{ profile_id }}" />
+
   <input
     type="hidden"
     id="profile_type"
@@ -54,6 +55,9 @@
     type="hidden"
     id="profile_checklist_ids"
     value="{{ profile_checklist_ids|join:',' }}" />
+
+    <a id="download-singlecell-manifest-link"><span>download</span></a>
+
 </div>
 {% endblock %}
 {% block page_tile %}
