--- a/src/apps/copo_core/templates/copo/base.html
+++ b/src/apps/copo_core/templates/copo/base.html
@@ -236,6 +236,10 @@
         .navbar-header {
             max-height: 55px;
         }
+
+        .empty_colour {
+            background-color: #f7eded;
+        }
     </style>
 </head>
 
