--- a/src/apps/copo_single_cell_submission/templates/copo/copo_single_cell.html
+++ b/src/apps/copo_single_cell_submission/templates/copo/copo_single_cell.html
@@ -110,7 +110,7 @@ data-backdrop="static" data-keyboard="false">
     <div class="modal-header">
         <button id='singlecell_close_btn' type="button" class="close" aria-label="Close" data-dismiss="modal"><span
                 aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Upload a completed manifest for : <span style="color:red;font-size:20px;" id="span_checklist" /> </h4>
+        <h4 class="modal-title">Upload a completed manifest for : <span style="color:white;font-size:20px;" id="span_checklist" /> </h4>
     </div>
     <div class="modal-body" style="width: 100%">
             <div class="col-lg-12 col-md-12 col-sm-12">
@@ -151,6 +151,7 @@ data-backdrop="static" data-keyboard="false">
   
     <div class="modal-footer">
         <button type="button" class="btn btn-primary" id="upload_singlecell_manifest_button">Upload Single Cell Manifest</button>
+        <button type="button" class="btn btn-primary" id="export_error_button">Export validation Errors</button>
         <button type="button" class="btn btn-primary" id="save_singlecell_button" disabled>Finish</button>
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
     </div>
