Statistics web page: Added sample type  option; Refactored CSS to its own file; Identified active stats web page

--- a/src/apps/copo_tol_dashboard/templates/stats/nav.html
+++ b/src/apps/copo_tol_dashboard/templates/stats/nav.html
@@ -1,6 +1,6 @@
 <hr/>
 <ul class="ul_style">
-    <li class="h4"><a href="{% url 'copo_tol_dashboard:stats' 'time_series' %}">COPO objects over time</a></li>
-    <li class="h4"><a href="{% url 'copo_tol_dashboard:stats' 'variable_histogram' %}">Tree of Life stats by variable</a></li>
+    <li id="timeSeriesTab" class="h4 active"><a href="{% url 'copo_tol_dashboard:stats' 'time_series' %}">COPO objects over time</a></li>
+    <li id="histogramTab" class="h4"><a href="{% url 'copo_tol_dashboard:stats' 'variable_histogram' %}">Tree of Life stats by variable</a></li>
 </ul>
 
